--- a/assets/less/tbpro/buttons.less
+++ b/assets/less/tbpro/buttons.less
@@ -24,7 +24,7 @@
 //
 .button-primary-filled-label:extend(.abstract-button-default) {
     .mixin-primary-filled();
-    .mixin-primary-filled-focus();
+    // .mixin-primary-filled-focus();
 }
 
 .button-primary-outline-label:extend(.abstract-button-default) {
@@ -69,27 +69,78 @@
 
 // ================================================================================
 // "Parent classes" for concrete buttons.
-// - Use with :extend.
+// - Use :extend to base a new class off a parent class.
 // - Do not use directly with class="" in markup.
-//
+
 .abstract-button-default {
-    display: inline-flex;
-    justify-content: center;
+    // display: inline-flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-shrink: 1;
+
+    // height: var(--height);
+
+    // margin: 0;
+    // padding: 1.125rem 1rem;
+
+    // box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.12);
+    // border: none;
+    // border-radius: var(--radius);
+    // cursor: pointer;
+
+    // // TODO: font styles - family, height
+    // font-size: var(--font-size);
+
+
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+
+  border: 0;
+  border-radius: var(--border-radius);
+  font-family: 'Inter', 'sans-serif';
+  font-size: var(--txt-input); /* 14px */
+  font-weight: 400;
+  line-height: 1;
+  padding: 1rem 1.12rem;
+  cursor: pointer;
+  user-select: none;
+
+  .icon {
+    display: flex;
     align-items: center;
-    flex-shrink: 1;
+    justify-content: center;
+    width: 0.75rem;
+    height: 0.75rem;
 
-    height: var(--height);
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
 
-    margin: 0;
-    padding: 1.125rem 1rem;
+  &:active {
+    outline: none !important;
+  }
 
-    box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.12);
-    border: none;
-    border-radius: var(--radius);
-    cursor: pointer;
 
-    // TODO: font styles - family, height
-    font-size: var(--font-size);
+  &:disabled {
+      background: var(--colour-neutral-base);
+      border: 0.0625rem solid var(--colour-neutral-border);
+      color: var(--colour-ti-muted);
+      cursor: not-allowed;
+  }
+
+
+  @media (prefers-reduced-motion: no-preference) {
+      transition: background-color 250ms ease-in-out,
+                  background 250ms ease-in-out,
+                  border 250ms ease-in-out,
+                  color 250ms ease-in-out,
+                  box-shadow 250ms ease-in-out;
+  }
 }
 
 .abstract-button-small:extend(.abstract-button-default) {
@@ -124,47 +175,72 @@
 // Button variant mixins
 //
 .mixin-primary-filled() {
-    @color1: var(--accents-blue, #37ADF9) -15.91%;
-    @color2: var(--primary-default, #1373D9) 20.02%;
-    @color3: var(--primary-hover, #175FB6) 100%;
-    @fill-color: linear-gradient(180deg, @color1, @color2, @color3);
-    .filled(@fill-color);
 
-    &:hover {
-        background: var(--primary-hover);
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.10);
+    background: linear-gradient(180deg, var(--colour-accent-blue) -31.82%, var(--colour-primary-default) 8.74%, var(--colour-primary-hover) 100%) border-box;
+    color: var(--colour-neutral-base);
+
+    &:hover:enabled {
+      background: linear-gradient(180deg, var(--colour-primary-hover) 0%, var(--colour-primary-hover) 100%);
     }
 
-    &:active {
-        background: var(--primary-pressed);
-        // background: red;
+    &:active:enabled {
+      background: linear-gradient(180deg, var(--colour-primary-pressed) 0%, var(--colour-primary-pressed) 100%);
     }
 
     &:disabled {
-        background: var(--surface-deep);
-        color: var(--text-icon-muted);
-
-        font-family: Inter;
-
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-
+      background: var(--colour-neutral-border);
+      color: var(--colour-ti-muted);
+      cursor: not-allowed;
     }
+
+    &:focus-visible {
+        outline: 0.125rem solid var(--colour-primary-default);
+        outline-offset: 0.125rem;
+    }
+
+    // @color1: var(--accents-blue, #37ADF9) -15.91%;
+    // @color2: var(--primary-default, #1373D9) 20.02%;
+    // @color3: var(--primary-hover, #175FB6) 100%;
+    // @fill-color: linear-gradient(180deg, @color1, @color2, @color3);
+    // .filled(@fill-color);
+
+    // &:hover {
+    //     background: var(--primary-hover);
+    //     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.10);
+    // }
+
+    // &:active {
+    //     background: var(--primary-pressed);
+    //     // background: red;
+    // }
+
+    // &:disabled {
+    //     background: var(--surface-deep);
+    //     color: var(--text-icon-muted);
+
+    //     font-family: Inter;
+
+    //     font-style: normal;
+    //     font-weight: 400;
+    //     line-height: normal;
+
+    // }
 }
 
 .mixin-primary-filled-focus() {
+
+
     // Using :focus-visible so that it's only for keyboard focus.
     // Regular :focus overrides the :active psuedo-class.
-    &:focus-visible {
-        @outer-border-color: var(--primary-default, #1373D9);
-        @background-color: var(--primary-hover, #175FB6);
-        .double-outline(
-            @outer-border-color,
-            white,
-            @background-color
-        );
-    }
+    // &:focus-visible {
+    //     @outer-border-color: var(--colour-primary-default);
+    //     @background-color: var(--colour-primary-hover);
+    //     .double-outline(
+    //         @outer-border-color,
+    //         white,
+    //         @background-color
+    //     );
+    // }
 }
 
 .mixin-primary-outline() {
