--- a/assets/less/tbpro/buttons.less
+++ b/assets/less/tbpro/buttons.less
@@ -2,7 +2,7 @@
     --height: 2.75rem; // 44px
     --height-small: 2.25rem; // 36px
     --radius: 0.5rem; // 8px
-    --border-width: 1px;
+    --border-width: 0.125rem;
     --button-text-color: #1A202C;
     --font-color: var(--text-icon-base);
     --font-size: 0.875rem;
@@ -24,7 +24,6 @@
 //
 .button-primary-filled-label:extend(.abstract-button-default) {
     .mixin-primary-filled();
-    // .mixin-primary-filled-focus();
 }
 
 .button-primary-outline-label:extend(.abstract-button-default) {
@@ -73,51 +72,30 @@
 // - Do not use directly with class="" in markup.
 
 .abstract-button-default {
-    // display: inline-flex;
-    // justify-content: center;
-    // align-items: center;
-    // flex-shrink: 1;
-
-    // height: var(--height);
-
-    // margin: 0;
-    // padding: 1.125rem 1rem;
-
-    // box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.12);
-    // border: none;
-    // border-radius: var(--radius);
-    // cursor: pointer;
-
-    // // TODO: font styles - family, height
-    // font-size: var(--font-size);
-
-
-
-  display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 0.5rem;
-
-  border: 0;
   border-radius: var(--border-radius);
+  border: 0;
+  cursor: pointer;
+  display: flex;
   font-family: 'Inter', 'sans-serif';
   font-size: var(--txt-input); /* 14px */
   font-weight: 400;
+  gap: 0.5rem;
+  justify-content: center;
   line-height: 1;
   padding: 1rem 1.12rem;
-  cursor: pointer;
   user-select: none;
 
   .icon {
-    display: flex;
     align-items: center;
+    display: flex;
+    height: 0.75rem;
     justify-content: center;
     width: 0.75rem;
-    height: 0.75rem;
 
     svg {
-      width: 100%;
       height: 100%;
+      width: 100%;
     }
   }
 
@@ -144,7 +122,9 @@
 }
 
 .abstract-button-small:extend(.abstract-button-default) {
-    height: var(--height-small);
+    font-size: 0.875rem;
+    height: 2rem;
+    min-width: initial;
     padding: 0.375rem 0.75rem;
 }
 
@@ -166,8 +146,8 @@
 }
 
 .abstract-button-brand-small:extend(.abstract-button-brand-default, .abstract-button-small) {
-    font-size:  0.6875rem;
-    padding: 0.875rem 1rem;
+    font-size: 0.6875rem;
+    padding: 0.375rem 0.75rem;
 }
 
 
@@ -175,7 +155,6 @@
 // Button variant mixins
 //
 .mixin-primary-filled() {
-
     background: linear-gradient(180deg, var(--colour-accent-blue) -31.82%, var(--colour-primary-default) 8.74%, var(--colour-primary-hover) 100%) border-box;
     color: var(--colour-neutral-base);
 
@@ -197,66 +176,35 @@
         outline: 0.125rem solid var(--colour-primary-default);
         outline-offset: 0.125rem;
     }
-
-    // @color1: var(--accents-blue, #37ADF9) -15.91%;
-    // @color2: var(--primary-default, #1373D9) 20.02%;
-    // @color3: var(--primary-hover, #175FB6) 100%;
-    // @fill-color: linear-gradient(180deg, @color1, @color2, @color3);
-    // .filled(@fill-color);
-
-    // &:hover {
-    //     background: var(--primary-hover);
-    //     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.10);
-    // }
-
-    // &:active {
-    //     background: var(--primary-pressed);
-    //     // background: red;
-    // }
-
-    // &:disabled {
-    //     background: var(--surface-deep);
-    //     color: var(--text-icon-muted);
-
-    //     font-family: Inter;
-
-    //     font-style: normal;
-    //     font-weight: 400;
-    //     line-height: normal;
-
-    // }
-}
-
-.mixin-primary-filled-focus() {
-
-
-    // Using :focus-visible so that it's only for keyboard focus.
-    // Regular :focus overrides the :active psuedo-class.
-    // &:focus-visible {
-    //     @outer-border-color: var(--colour-primary-default);
-    //     @background-color: var(--colour-primary-hover);
-    //     .double-outline(
-    //         @outer-border-color,
-    //         white,
-    //         @background-color
-    //     );
-    // }
 }
 
 .mixin-primary-outline() {
-    .outline(linear-gradient(-13deg, #58C9FF, #175FB6));
+    @color-start: var(--colour-primary-default-dark);
+    @color-mid: var(--colour-primary-default);
+    @color-end: var(--colour-primary-hover);;
 
-    &:hover {
+    .outline(linear-gradient(180deg, @color-start -31.82%, @color-mid 8.74%, @color-end 100%));
+
+    color: var(--colour-primary-hover);
+
+    &:hover:enabled {
         // Using named param for 3rd arg, since we're skipping the second one.
-        .outline(var(--primary-hover), @border-width: 0.125rem);
+        .outline(var(--colour-primary-hover), @border-width: 0.125rem);
     }
 
-    &:active {
-        .outline(var(--primary-pressed), rgba(88, 201, 255, 0.10), 0.125rem);
+    &:active:enabled {
+        @bg: color-mix(in srgb, var(--colour-accent-blue), transparent 90%);
+        .outline(var(--colour-primary-pressed), @bg, 0.125rem);
+    }
+
+    &:focus-visible {
+        outline: 0.125rem solid var(--colour-primary-default);
+        outline-offset: 0.125rem;
     }
 
     &:disabled {
-        .outline(var(--surface-border));
+        .outline(var(--colour-neutral-border));
+        color: var(----colour-ti-muted);
     }
 }
 
@@ -385,7 +333,7 @@
 
     border: 0;
     background: @background-color;
-    color: inherit;
+
 
     // Gradient ring only
     &::before {
