Hard code font color value for :disabled outline buttons

--- a/assets/less/tbpro/buttons.less
+++ b/assets/less/tbpro/buttons.less
@@ -202,7 +202,8 @@
 
     &:disabled {
         .outline(var(--colour-neutral-border));
-        color: var(----colour-ti-muted);
+        color: #737584;
+        cursor: not-allowed;
     }
 }
 
