Implement destructive outline buttons

--- a/assets/less/tbpro/buttons.less
+++ b/assets/less/tbpro/buttons.less
@@ -54,12 +54,16 @@
     .mixin-destructive-filled();
 }
 
+.button-destructive-small-filled-label:extend(.abstract-button-small) {
+    .mixin-destructive-filled();
+}
+
 .button-destructive-outline-label:extend(.abstract-button-default) {
     .mixin-destructive-outline();
 }
 
-.button-destructive-small-filled-label:extend(.abstract-button-small) {
-    .mixin-destructive-filled();
+.button-destructive-small-outline-label:extend(.abstract-button-small) {
+    .mixin-destructive-outline();
 }
 
 
@@ -238,20 +242,6 @@
 
 }
 
-// .mixin-brand-filled-icon-focus() {
-//     // Using :focus-visible so that it's only for keyboard focus.
-//     // Regular :focus overrides the :active psuedo-class.
-//     &:focus-visible {
-//         @outer-border-color: var(--primary-default, #1373D9);
-//         @background-color: var(--primary-hover);
-//         .double-outline(
-//             @outer-border-color,
-//             white,
-//             @background-color
-//         );
-//     }
-// }
-
 .mixin-brand-outline() {
 
     @border-color: linear-gradient(98.98deg, #58C9FF 19.15%, #6E6F9B 75.77%);
@@ -272,13 +262,12 @@
     &:focus-visible {
         @outer-border: var(--colour-primary-default);
         @inner-border: linear-gradient(98.98deg, #58C9FF 19.15%, #6E6F9B 75.77%);
-        // @background: var(--surface-base, #FEFFFF);
 
         .spaced-double-outline(@outer-border, @inner-border,
             2px,     // outer border width
             2px,     // inner border width
             1px      // gap between borders
-);
+        );
         color: var(--colour-ti-base);
     }
 
@@ -289,23 +278,6 @@
     }
 
 }
-
-// .mixin-brand-outline-focus() {
-//     &:focus-visible {
-//         @background-color: var(--surface-base);
-//         .spaced-double-outline(
-//             #1373D9,
-//             @border-color, // inner border
-//             @background-color,
-//             2px,     // outer border width
-//             2px,     // inner border width
-//             2px      // gap between borders
-//         );
-
-//         color: #1A202C;
-//         text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
-//     }
-// }
 
 .mixin-destructive-filled() {
     .filled(var(--colour-danger-default));
@@ -332,24 +304,28 @@
 }
 
 .mixin-destructive-outline() {
-    .outline(var(--critical-default));
-    color: var(--critical-default);
+    .outline(var(--colour-danger-default));
+    color: var(--colour-danger-default);
 
     &:hover {
-        .outline(var(--critical-hover));
-        color: var(--critical-hover);
+        .outline(var(--colour-danger-hover));
+        color: var(--colour-danger-hover);
     }
 
     &:active {
-        .outline(var(--critical-pressed));
-        color: var(--critical-pressed);
+        .outline(var(--colour-danger-pressed));
+        color: var(--colour-danger-hover);
     }
 
-
+    &:focus-visible {
+        outline: 0.125rem solid var(--colour-danger-hover);
+        outline-offset: 0.125rem;
+    }
 
     &:disabled {
         .outline(var(--surface-border));
         color: var(--text-icon-muted);
+        cursor: not-allowed;
         text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
     }
 }
