Force contrasting colors for buttons

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -619,6 +619,14 @@ section#details {
                 grid-column: 1 / 4;
             }
 
+            button {
+                color: var(--text-icon-base);
+                display: inline-block;
+                &:hover {
+                    color: var(--colour-ti-base);
+                }
+            }
+
             h3 {
                 -webkit-background-clip: text;
                 .headings-h3-small();
