--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -326,6 +326,13 @@ footer#tb-footer {
                         align-self: center;
                     }
                 }
+
+                button {
+                    color: var(--text-icon-base);
+                    &:hover {
+                        color: var(--colour-ti-base);
+                    }
+                }
             }
         }
 
