--- a/assets/less/tbpro/buttons.less
+++ b/assets/less/tbpro/buttons.less
@@ -2,7 +2,7 @@
     --height: 2.75rem; // 44px
     --height-small: 2.25rem; // 36px
     --radius: 0.5rem; // 8px
-    --border-width: 1px;
+    --border-width: 0.125rem;
     --button-text-color: #1A202C;
     --font-color: var(--text-icon-base);
     --font-size: 0.875rem;
@@ -21,274 +21,312 @@
 
 // ================================================================================
 // Concrete classes for each kind of button
-//
-.button-primary-filled-label:extend(.button-default) {
-    .primary-filled-mixin();
-    .primary-filled-focus-mixin();
+// Uses mixins for button-specific styling to correctly apply pseudo-elements
+// and element states.
+.button-primary-filled-label:extend(.abstract-button-default) {
+    .mixin-primary-filled();
 }
 
-.button-primary-outline-label:extend(.button-default) {
-    .primary-outline-mixin();
+.button-primary-outline-label:extend(.abstract-button-default) {
+    .mixin-primary-outline();
 }
 
-.button-primary-small-filled-label:extend(.button-small) {
-    .primary-filled-mixin();
+.button-primary-small-filled-label:extend(.abstract-button-small) {
+    .mixin-primary-filled();
 }
 
-.button-primary-small-outline-label:extend(.button-small) {
-    .primary-outline-mixin();
+.button-primary-small-outline-label:extend(.abstract-button-small) {
+    .mixin-primary-outline();
 }
 
-.button-brand-filled-label-icon:extend(.button-brand-default) {
-    .brand-filled-icon-mixin();
-    .brand-filled-icon-focus-mixin();
+.button-brand-filled-label-icon:extend(.abstract-button-brand-default) {
+    .mixin-brand-filled-icon();
 }
 
-.button-brand-outline-label:extend(.button-brand-default) {
-    .brand-outline-mixin();
-    .brand-outline-focus-mixin();
+.button-brand-outline-label:extend(.abstract-button-brand-default) {
+    .mixin-brand-outline();
 }
 
-.button-brand-small-outline-label:extend(.button-brand-small) {
-    .brand-outline-mixin();
-    .brand-outline-focus-mixin();
+.button-brand-small-outline-label:extend(.abstract-button-brand-small) {
+    .mixin-brand-outline();
 }
 
-.button-destructive-filled-label:extend(.button-default) {
-    .destructive-filled-mixin();
+.button-destructive-filled-label:extend(.abstract-button-default) {
+    .mixin-destructive-filled();
 }
 
-.button-destructive-outline-label:extend(.button-default) {
-    .destructive-outline-mixin();
+.button-destructive-small-filled-label:extend(.abstract-button-small) {
+    .mixin-destructive-filled();
 }
 
-.button-destructive-small-filled-label:extend(.button-small) {
-    .destructive-filled-mixin();
+.button-destructive-outline-label:extend(.abstract-button-default) {
+    .mixin-destructive-outline();
+}
+
+.button-destructive-small-outline-label:extend(.abstract-button-small) {
+    .mixin-destructive-outline();
 }
 
 
 // ================================================================================
-// "Parent classes" for concrete buttons
-//
-.button-default {
-    display: inline-flex;
-    justify-content: center;
+// "Parent classes" for concrete buttons.
+// - Use :extend to base a new class off a parent class.
+// - Do not use directly with class="" in markup.
+
+.abstract-button-default {
+  align-items: center;
+  border-radius: var(--border-radius);
+  border: 0;
+  cursor: pointer;
+  display: flex;
+  font-family: 'Inter', 'sans-serif';
+  font-size: var(--txt-input); /* 14px */
+  font-weight: 400;
+  gap: 0.5rem;
+  justify-content: center;
+  line-height: 1;
+  padding: 1rem 1.12rem;
+  user-select: none;
+
+  .icon {
     align-items: center;
-    flex-shrink: 1;
+    display: flex;
+    height: 0.75rem;
+    justify-content: center;
+    width: 0.75rem;
 
-    height: var(--height);
+    svg {
+      height: 100%;
+      width: 100%;
+    }
+  }
 
-    margin: 0;
-    padding: 1.125rem 1rem;
+  &:active {
+    outline: none !important;
+  }
 
-    box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.12);
-    border: none;
-    border-radius: var(--radius);
-    cursor: pointer;
 
-    // TODO: font styles - family, height
-    font-size: var(--font-size);
+  &:disabled {
+      background: var(--colour-neutral-base);
+      border: 0.0625rem solid var(--colour-neutral-border);
+      color: var(--colour-ti-muted);
+      cursor: not-allowed;
+  }
+
+
+  @media (prefers-reduced-motion: no-preference) {
+      transition: background-color 250ms ease-in-out,
+                  background 250ms ease-in-out,
+                  border 250ms ease-in-out,
+                  color 250ms ease-in-out,
+                  box-shadow 250ms ease-in-out;
+  }
 }
 
-.button-small:extend(.button-default) {
-    height: var(--height-small);
+.abstract-button-small:extend(.abstract-button-default) {
+    font-size: 0.875rem;
+    height: 2rem;
+    min-width: initial;
     padding: 0.375rem 0.75rem;
 }
 
-.button-brand-default:extend(.button-default) {
+.abstract-button-brand-default:extend(.abstract-button-default) {
+    .mixin-font-styles(
+        @family-inter,
+        600,
+        0.8125rem,
+        normal,
+        0.33px
+    );
+
+    color: var(--colour-ti-base);
     padding: 1rem 1.5rem;
-
-    font-size:  0.8125rem;
-    color: var(--text-icon-base, #1A202C);
     text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
-
-    /* web/label/xsmall */
-    font-family: Inter;
-
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 0.33px;
     text-transform: uppercase;
 }
 
-.button-brand-small:extend(.button-brand-default, .button-small) {
-    font-size:  0.6875rem;
-    padding: 0.875rem 1rem;
+.abstract-button-brand-small:extend(.abstract-button-brand-default, .abstract-button-small) {
+    font-size: 0.6875rem;
+    padding: 0.375rem 0.75rem;
 }
 
 
 // ================================================================================
 // Button variant mixins
 //
-.primary-filled-mixin() {
-    @color1: var(--accents-blue, #37ADF9) -15.91%;
-    @color2: var(--primary-default, #1373D9) 20.02%;
-    @color3: var(--primary-hover, #175FB6) 100%;
-    @fill-color: linear-gradient(180deg, @color1, @color2, @color3);
-    .filled(@fill-color);
+.mixin-primary-filled() {
+    background: linear-gradient(180deg, var(--colour-accent-blue) -31.82%, var(--colour-primary-default) 8.74%, var(--colour-primary-hover) 100%) border-box;
+    color: var(--colour-neutral-base);
 
-    &:hover {
-        background: var(--primary-hover);
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.10);
+    &:hover:enabled {
+      background: linear-gradient(180deg, var(--colour-primary-hover) 0%, var(--colour-primary-hover) 100%);
     }
 
-    &:active {
-        background: var(--primary-pressed);
-        // background: red;
+    &:active:enabled {
+      background: linear-gradient(180deg, var(--colour-primary-pressed) 0%, var(--colour-primary-pressed) 100%);
     }
 
     &:disabled {
-        background: var(--surface-deep);
-        color: var(--text-icon-muted);
-
-        font-family: Inter;
-
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-
+      background: var(--colour-neutral-border);
+      color: var(--colour-ti-muted);
+      cursor: not-allowed;
     }
-}
 
-.primary-filled-focus-mixin() {
-    // Using :focus-visible so that it's only for keyboard focus.
-    // Regular :focus overrides the :active psuedo-class.
     &:focus-visible {
-        @outer-border-color: var(--primary-default, #1373D9);
-        @background-color: var(--primary-hover, #175FB6);
-        .double-outline(
-            @outer-border-color,
-            white,
-            @background-color
-        );
+        outline: 0.125rem solid var(--colour-primary-default);
+        outline-offset: 0.125rem;
     }
 }
 
-.primary-outline-mixin() {
-    .outline(linear-gradient(-13deg, #58C9FF, #175FB6));
+.mixin-primary-outline() {
+    @color-start: var(--colour-primary-default-dark);
+    @color-mid: var(--colour-primary-default);
+    @color-end: var(--colour-primary-hover);;
 
-    &:hover {
+    .outline(linear-gradient(180deg, @color-start -31.82%, @color-mid 8.74%, @color-end 100%));
+
+    color: var(--colour-primary-hover);
+
+    &:hover:enabled {
         // Using named param for 3rd arg, since we're skipping the second one.
-        .outline(var(--primary-hover), @border-width: 0.125rem);
+        .outline(var(--colour-primary-hover), @border-width: 0.125rem);
     }
 
-    &:active {
-        .outline(var(--primary-pressed), rgba(88, 201, 255, 0.10), 0.125rem);
+    &:active:enabled {
+        @bg: color-mix(in srgb, var(--colour-accent-blue), transparent 90%);
+        .outline(var(--colour-primary-pressed), @bg, 0.125rem);
+    }
+
+    &:focus-visible {
+        outline: 0.125rem solid var(--colour-primary-default);
+        outline-offset: 0.125rem;
     }
 
     &:disabled {
-        .outline(var(--surface-border));
+        .outline(var(--colour-neutral-border));
+        color: #737584;
+        cursor: not-allowed;
     }
 }
 
-.brand-filled-icon-mixin() {
-    @border-color: linear-gradient(-13deg, #A0E1FF, #2B8CDC);
+.mixin-brand-filled-icon() {
+
+    @border-color: linear-gradient(116.63deg, #A0E1FF -13.89%, #2B8CDC 37.7%);
     @background-color: linear-gradient(329deg, #1373D9 -21.06%, #58C9FF 64%);
-    .outline(@border-color, @background-color);
-    color: var(--button-text-color);
+    .outline(@border-color, @background-color, @border-width: 1px);
 
-    &:hover {
-        @border-color: #A0E1FF;
-        @background-color: var(--primary-hover);
-        .outline(@border-color, @background-color);
-        color: var(--surface-base);
+    &:hover:enabled {
+      background: linear-gradient(var(--colour-primary-hover), var(--colour-primary-hover));
+      color: var(--colour-neutral-base);
     }
 
-    &:active {
-        @border-color: #A0E1FF;
-        @background-color: var(--primary-pressed);
-        .outline(@border-color, @background-color);
-        color: var(--surface-base);
+    &:active:enabled {
+      background: linear-gradient(var(--colour-primary-pressed), var(--colour-primary-pressed));
+      color: var(--colour-neutral-base);
     }
-}
 
-.brand-filled-icon-focus-mixin() {
-    // Using :focus-visible so that it's only for keyboard focus.
-    // Regular :focus overrides the :active psuedo-class.
     &:focus-visible {
-        @outer-border-color: var(--primary-default, #1373D9);
-        @background-color: var(--primary-hover);
-        .double-outline(
-            @outer-border-color,
-            white,
-            @background-color
-        );
+        background: linear-gradient(var(--colour-primary-hover), var(--colour-primary-hover));
+        color: var(--colour-neutral-base);
+        outline: 0.125rem solid var(--colour-primary-default);
+        outline-offset: 0.125rem;
     }
+
+    &:disabled {
+        @background-color: var(--colour-neutral-border);
+        @noop-color: #fff;
+        .outline(@noop-color, @background-color, @border-width: 0);
+
+        color: var(--colour-ti-muted);
+        cursor: not-allowed;
+    }
+
 }
 
-.brand-outline-mixin() {
-    @border-color: linear-gradient(-13deg, #A0E1FF, #2B8CDC);
+.mixin-brand-outline() {
+
+    @border-color: linear-gradient(98.98deg, #58C9FF 19.15%, #6E6F9B 75.77%);
     .outline(@border-color);
     color: #1A202C;
     text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
 
     &:hover {
-        .outline(@border-color, var(--surface-base));
-        color: #1A202C;
-        text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
+        .outline(@border-color, #f2f2f2);
+        color: var(--colour-ti-base-light);
     }
 
     &:active {
-        // .outline(@border-color, var(--surface-lower));
-        // .outline(@border-color, red);
-        color: #1A202C;
-        text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
+        .outline(@border-color, #e3e3e3);
+        color: var(--colour-ti-base-light);
     }
-}
 
-.brand-outline-focus-mixin() {
     &:focus-visible {
-        @background-color: var(--surface-base);
-        .spaced-double-outline(
-            #1373D9,
-            @border-color, // inner border
-            @background-color,
+        @outer-border: var(--colour-primary-default);
+        @inner-border: linear-gradient(98.98deg, #58C9FF 19.15%, #6E6F9B 75.77%);
+
+        .spaced-double-outline(@outer-border, @inner-border,
             2px,     // outer border width
             2px,     // inner border width
-            2px      // gap between borders
+            1px      // gap between borders
         );
-
-        color: #1A202C;
-        text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
-    }
-}
-
-.destructive-filled-mixin() {
-    .filled(var(--critical-default));
-
-    &:hover {
-        .filled(var(--critical-hover));
-    }
-
-    &:active {
-        .filled(var(--critical-pressed));
+        color: var(--colour-ti-base);
     }
 
     &:disabled {
-        .filled(var(--surface-deep));
-        color: var(--text-icon-muted);
+        .outline(var(--colour-neutral-border));
+        color: #737584;
+        cursor: not-allowed;
+    }
+
+}
+
+.mixin-destructive-filled() {
+    .filled(var(--colour-danger-default));
+
+    &:hover {
+        .filled(var(--colour-danger-hover));
+    }
+
+    &:active {
+        .filled(var(--colour-danger-pressed));
+    }
+
+    &:focus-visible {
+        outline: 0.125rem solid var(--colour-danger-hover);
+        outline-offset: 0.125rem;
+    }
+
+    &:disabled {
+        .filled(var(--colour-neutral-border));
+        color: var(--colour-ti-muted);
+        cursor: not-allowed;
         text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
     }
 }
 
-.destructive-outline-mixin() {
-    .outline(var(--critical-default));
-    color: var(--critical-default);
+.mixin-destructive-outline() {
+    .outline(var(--colour-danger-default));
+    color: var(--colour-danger-default);
 
     &:hover {
-        .outline(var(--critical-hover));
-        color: var(--critical-hover);
+        .outline(var(--colour-danger-hover));
+        color: var(--colour-danger-hover);
     }
 
     &:active {
-        .outline(var(--critical-pressed));
-        color: var(--critical-pressed);
+        .outline(var(--colour-danger-pressed));
+        color: var(--colour-danger-hover);
+    }
+
+    &:focus-visible {
+        outline: 0.125rem solid var(--colour-danger-hover);
+        outline-offset: 0.125rem;
     }
 
     &:disabled {
         .outline(var(--surface-border));
         color: var(--text-icon-muted);
+        cursor: not-allowed;
         text-shadow: 0.5px 0.5px 0 rgba(255, 255, 255, 0.10);
     }
 }
@@ -307,7 +345,7 @@
 
     border: 0;
     background: @background-color;
-    color: inherit;
+
 
     // Gradient ring only
     &::before {
@@ -396,7 +434,8 @@
         content: "";
         position: absolute;
         inset: 0;
-        border-radius: inherit;
+        // border-radius: inherit;
+        border-radius: 0.625rem;
         background: @outer-border-color;
         box-sizing: border-box;
         padding: @outer-width;
@@ -416,7 +455,9 @@
         content: "";
         position: absolute;
         inset: (@outer-width + @gap); /* Gap = outer border + space + inner border position */
-        border-radius: inherit;
+        // border-radius: inherit;
+        border-radius: 0.5rem;
+
         background: @inner-border-color;
         box-sizing: border-box;
         padding: @inner-width;
