--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -4,6 +4,8 @@
 @import "colours.less";
 @import "buttons.less";
 
+@import "../common/shared-footer.less";
+
 // ------------------------------------------------------------
 // border-box, everywhere
 // ------------------------------------------------------------
@@ -72,117 +74,6 @@ body {
     margin-inline: auto;
     max-width: @lg;
 }
-
-
-
-
-// ------------------------------------------------------------
-// Footer
-// ------------------------------------------------------------
-footer#tb-footer {
-    background-image: linear-gradient(168deg, #1b2128 1%, #171b24 45%);
-    display: grid;
-    padding-block: @space-36;
-    padding-inline: @gutter;
-
-    @media (min-width: @md) {
-        padding-inline: @space-144;
-    }
-
-    a {
-        // Disabling for now, as the designs do not differentiate dark/light mode.
-        // But the colours.less file defines dark/light.
-        // color: var(--color-on-primary);
-
-        color: var(--text-icon-base);
-        text-decoration: none;
-        &:visited {
-            color: var(--text-icon-base);
-        }
-    }
-
-    #nav-link-home, #nav-link-home svg { width: 208px;  height: 36px; }
-    #moz-link-home svg { width: 150px; height: 36px;}
-
-    #site-nav {
-        align-items: start;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        display: grid;
-        gap: @gutter;
-        grid-template: 1fr auto / auto;
-        padding-bottom: @space-24;
-        width: 100%;
-
-        .site-nav-links {
-            display: flex;
-            flex-wrap: wrap;
-            gap: @space-24;
-
-            a {
-                font-size: 0.75rem;
-                text-transform: uppercase;
-            }
-        }
-
-        @media (min-width: @md) {
-            align-items: center;
-            grid-template: 1fr / 1fr auto;
-        }
-    }
-
-    #moz-nav {
-        display: grid;
-        gap: @gutter;
-        padding-bottom: @space-9;
-        padding-top: @space-24;
-
-        .moz-nav-links {
-            display: grid;
-            gap: @space-9;
-            grid-auto-flow: column;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: repeat(3, auto);
-            margin-top: @space-6;
-
-            a {
-                font-size: .75rem;
-            }
-        }
-
-        @media (min-width: @lg) {
-            grid-template-columns: auto 1fr;
-            align-items: start;
-            column-gap: @space-96;
-
-            #moz-link-home {
-                grid-column: 1;
-                grid-row: 1 / span 2;
-            }
-
-            .moz-nav-links {
-                grid-column: 2;
-                grid-row: 1;
-
-                display: flex;
-                gap: @space-36;
-            }
-
-            #tb-legal {
-                grid-column: 2;
-                grid-row: 2;
-            }
-        }
-    }
-
-    #tb-legal {
-        font-size: .75rem;
-        a {
-            text-decoration: underline;
-        }
-    }
-}
-
-
 
 // ------------------------------------------------------------
 // Header (nav bar)
