Include shared footer and calamity bar on tb.pro landing page

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -4,6 +4,7 @@
 @import "colours.less";
 @import "buttons.less";
 
+@import "../common/calamity-bar.less";
 @import "../common/shared-footer.less";
 
 // ------------------------------------------------------------
@@ -79,7 +80,7 @@ body {
 // Header (nav bar)
 // ------------------------------------------------------------
 #site-header {
-    margin-block: @gutter @space-36;
+    margin-block: 0 @space-36;
     padding-top: @space-16;
 
     @media (min-width: @lg) {
